[workspace]
members = ["./peg-macros", "./peg-runtime"]

[package]
name = "pegtastic"
version = "0.1.0"
authors = [ "Kevin Mehall <km@kevinmehall.net>", "Sandeep Datta <datta.sandeep@gmail.com>" ]
license = "MIT"
repository = "https://github.com/sandeep-datta/rust-peg"
documentation = "https://github.com/sandeep-datta/rust-peg/blob/master/README.md#readme"
description = "A simple Parsing Expression Grammar (PEG) parser generator."
keywords = ["peg", "parser", "parsing", "grammar"]
categories = ["parsing"]
readme = "README.md"
edition = "2018"

[dependencies]
pegtastic-macros = { path = "./peg-macros", version = "= 0.1.0" }
pegtastic-runtime = { path = "./peg-runtime", version = "= 0.1.0" }

[dev-dependencies]
trybuild = "1.0"

[[test]]
name = "trybuild"
path = "tests/trybuild.rs"
harness = false

[features]
trace = ["pegtastic-macros/trace"]
