[package]
name = "pegtastic-macros"
version = "0.1.0"
authors = [ "Kevin Mehall <km@kevinmehall.net>", "Sandeep Datta <datta.sandeep@gmail.com>" ]
license = "MIT"
repository = "https://github.com/sandeep-datta/rust-peg"
description = "Procedural macros for rust-peg. To use rust-peg, see the `peg` crate."
edition = "2018"

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
pegtastic-runtime = { version = "= 0.1.0", path = "../peg-runtime" }

[features]
trace = []

[lib]
proc-macro = true
name = "pegtastic_macros"
path = "lib.rs"

[[bin]]
name = "pegtastic"
path = "bin.rs"
test = false
bench = false
